# ai-research-works

./: .gitignore  LICENSE  README.md
projects/agentic-ablation-benchmark/: README.md  pyproject.toml
projects/agentic-ablation-benchmark/benchmarks/: sample_ablation_benchmark.json
projects/agentic-ablation-benchmark/configs/: default_ablation.json
projects/agentic-ablation-benchmark/docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
projects/agentic-ablation-benchmark/src/agentic_ablation_benchmark/: __init__.py  cli.py  dataset.py  metrics.py  models.py  reporting.py  runner.py  scoring.py
projects/agentic-ablation-benchmark/tests/: test_runner.py  test_scoring.py
projects/bandit-policy-evaluation-lab/: README.md  pyproject.toml
projects/bandit-policy-evaluation-lab/benchmarks/: sample_bandit_benchmark.json
projects/bandit-policy-evaluation-lab/configs/: default_policy_eval.json
projects/bandit-policy-evaluation-lab/docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
projects/bandit-policy-evaluation-lab/src/bandit_policy_evaluation_lab/: __init__.py  cli.py  dataset.py  evaluation.py  metrics.py  models.py  reporting.py  runner.py
projects/bandit-policy-evaluation-lab/tests/: test_evaluation.py  test_runner.py
projects/citation-grounding-lab/: README.md  pyproject.toml
projects/citation-grounding-lab/benchmarks/: sample_benchmark.json
projects/citation-grounding-lab/configs/: default_experiment.json
projects/citation-grounding-lab/docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
projects/citation-grounding-lab/src/citation_grounding_lab/: __init__.py  citations.py  claims.py  cli.py  dataset.py  grounding.py  metrics.py  models.py  reporting.py  retrieval.py  runner.py  text.py
projects/citation-grounding-lab/tests/: test_claims.py  test_grounding.py
projects/long-context-stress-lab/: README.md  pyproject.toml
projects/long-context-stress-lab/benchmarks/: sample_context_benchmark.json
projects/long-context-stress-lab/configs/: default_stress.json
projects/long-context-stress-lab/docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
projects/long-context-stress-lab/src/long_context_stress_lab/: __init__.py  cli.py  dataset.py  drift.py  metrics.py  (+4 more)
projects/long-context-stress-lab/tests/: test_packing.py  test_runner.py
projects/mlops-experiment-registry-lab/: README.md  pyproject.toml
projects/mlops-experiment-registry-lab/benchmarks/: sample_registry_benchmark.json
projects/mlops-experiment-registry-lab/configs/: default_registry_policy.json
projects/mlops-experiment-registry-lab/docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
projects/mlops-experiment-registry-lab/tests/: test_registry.py  test_runner.py
projects/multi-hop-evidence-mapper/: README.md  pyproject.toml
projects/multi-hop-evidence-mapper/benchmarks/: sample_multi_hop.json
projects/multi-hop-evidence-mapper/configs/: default_mapping.json
projects/multi-hop-evidence-mapper/docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
projects/multi-hop-evidence-mapper/tests/: test_mapping.py  test_runner.py
projects/multimodal-retrieval-lab/: README.md  pyproject.toml
projects/multimodal-retrieval-lab/benchmarks/: sample_multimodal_benchmark.json
projects/multimodal-retrieval-lab/configs/: default_retrieval_eval.json
projects/multimodal-retrieval-lab/docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
projects/multimodal-retrieval-lab/tests/: test_evaluation.py  test_runner.py
projects/nlp-semantic-evaluation-lab/: README.md  pyproject.toml
projects/nlp-semantic-evaluation-lab/benchmarks/: sample_nlp_benchmark.json
projects/nlp-semantic-evaluation-lab/configs/: default_nlp_eval.json
projects/nlp-semantic-evaluation-lab/docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
projects/nlp-semantic-evaluation-lab/tests/: test_runner.py  test_semantics.py
projects/prompt-rubric-distillation-lab/: README.md  pyproject.toml
projects/prompt-rubric-distillation-lab/benchmarks/: sample_rubrics.json
projects/prompt-rubric-distillation-lab/configs/: default_distillation.json
projects/prompt-rubric-distillation-lab/docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
projects/prompt-rubric-distillation-lab/tests/: test_distillation.py  test_runner.py
projects/ranking-recommender-lab/: README.md  pyproject.toml
projects/ranking-recommender-lab/benchmarks/: sample_ranking_benchmark.json
projects/ranking-recommender-lab/configs/: default_ranking_eval.json
projects/ranking-recommender-lab/docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
projects/ranking-recommender-lab/tests/: test_evaluation.py  test_runner.py
projects/tabular-ml-reliability-lab/: README.md  pyproject.toml
projects/tabular-ml-reliability-lab/benchmarks/: sample_tabular_benchmark.json
projects/tabular-ml-reliability-lab/configs/: default_reliability.json
projects/tabular-ml-reliability-lab/docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
projects/tabular-ml-reliability-lab/tests/: test_analysis.py  test_runner.py
projects/time-series-forecasting-lab/: README.md  pyproject.toml
projects/time-series-forecasting-lab/benchmarks/: sample_time_series_benchmark.json
projects/time-series-forecasting-lab/configs/: default_forecast.json
projects/time-series-forecasting-lab/docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
projects/time-series-forecasting-lab/tests/: test_forecasting.py  test_runner.py
projects/tool-trajectory-audit-lab/: README.md  pyproject.toml
projects/tool-trajectory-audit-lab/benchmarks/: sample_traces.json
projects/tool-trajectory-audit-lab/configs/: default_audit.json
projects/tool-trajectory-audit-lab/docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
projects/tool-trajectory-audit-lab/tests/: test_auditing.py  test_runner.py
projects/vision-evaluation-lab/: README.md  pyproject.toml
projects/vision-evaluation-lab/benchmarks/: sample_vision_benchmark.json
projects/vision-evaluation-lab/configs/: default_vision_eval.json
projects/vision-evaluation-lab/docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md
projects/vision-evaluation-lab/tests/: test_metrics.py  test_runner.py
(+79 files in other folders)
