[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ablation-benchmark"
version = "0.1.0"
description = "Portfolio-ready framework for comparing agent variants across prompt, tool, and retrieval policies."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Akif T." }
]
dependencies = []

[project.scripts]
agentic-ablation-benchmark = "agentic_ablation_benchmark.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
