[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bandit-policy-evaluation-lab"
version = "0.1.0"
description = "Portfolio-ready reinforcement learning lab for offline bandit policy evaluation and regret analysis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Akif T." }
]
dependencies = []

[project.scripts]
bandit-policy-evaluation-lab = "bandit_policy_evaluation_lab.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
