[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "citation-grounding-lab"
version = "0.1.0"
description = "Portfolio-ready framework for evaluating citation grounding in RAG and LLM answers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Akif T." }
]
dependencies = []

[project.scripts]
citation-grounding-lab = "citation_grounding_lab.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
