[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "long-context-stress-lab"
version = "0.1.0"
description = "Portfolio-ready framework for long-context packing and answer drift analysis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Akif T." }
]
dependencies = []

[project.scripts]
long-context-stress-lab = "long_context_stress_lab.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
