[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-hop-evidence-mapper"
version = "0.1.0"
description = "Portfolio-ready framework for analyzing multi-document reasoning chains."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Akif T." }
]
dependencies = []

[project.scripts]
multi-hop-evidence-mapper = "multi_hop_evidence_mapper.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
