[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-retrieval-lab"
version = "0.1.0"
description = "Portfolio-ready multimodal retrieval lab for image-text ranking evaluation and robustness analysis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Akif T." }
]
dependencies = []

[project.scripts]
multimodal-retrieval-lab = "multimodal_retrieval_lab.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
