[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-semantic-evaluation-lab"
version = "0.1.0"
description = "Portfolio-ready NLP evaluation lab for semantic similarity, entities, and intent quality."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Akif T." }
]
dependencies = []

[project.scripts]
nlp-semantic-evaluation-lab = "nlp_semantic_evaluation_lab.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
