[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ranking-recommender-lab"
version = "0.1.0"
description = "Portfolio-ready recommender-systems lab for ranking evaluation, coverage diagnostics, and cold-start analysis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Akif T." }
]
dependencies = []

[project.scripts]
ranking-recommender-lab = "ranking_recommender_lab.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
