[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tabular-ml-reliability-lab"
version = "0.1.0"
description = "Portfolio-ready tabular ML reliability lab for data drift and leakage audits."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Akif T." }
]
dependencies = []

[project.scripts]
tabular-ml-reliability-lab = "tabular_ml_reliability_lab.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
