[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "time-series-forecasting-lab"
version = "0.1.0"
description = "Portfolio-ready data science lab for time-series forecasting backtests."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Akif T." }
]
dependencies = []

[project.scripts]
time-series-forecasting-lab = "time_series_forecasting_lab.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
